// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Candytar renders with color new-horizon 1`] = `
<svg
  className="ax-candytar ax-candytar--new-horizon"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color giant-leap 1`] = `
<svg
  className="ax-candytar ax-candytar--giant-leap"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color ground-control 1`] = `
<svg
  className="ax-candytar ax-candytar--ground-control"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color primeval-soup 1`] = `
<svg
  className="ax-candytar ax-candytar--primeval-soup"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color terra-form 1`] = `
<svg
  className="ax-candytar ax-candytar--terra-form"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color luna-dust 1`] = `
<svg
  className="ax-candytar ax-candytar--luna-dust"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color serene-sea 1`] = `
<svg
  className="ax-candytar ax-candytar--serene-sea"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color blast-off 1`] = `
<svg
  className="ax-candytar ax-candytar--blast-off"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color critical-mass 1`] = `
<svg
  className="ax-candytar ax-candytar--critical-mass"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color paradise-lost 1`] = `
<svg
  className="ax-candytar ax-candytar--paradise-lost"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color tiny-clanger 1`] = `
<svg
  className="ax-candytar ax-candytar--tiny-clanger"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color moon-lagoon 1`] = `
<svg
  className="ax-candytar ax-candytar--moon-lagoon"
  style={
    Object {
      "height": "2rem",
      "width": "2rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with custom size 1`] = `
<svg
  className="ax-candytar ax-candytar--tiny-clanger"
  style={
    Object {
      "height": "4rem",
      "width": "4rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;
